@@ -1,5 +1,10 @@
 2007-06-06  Jens Granseuer  <jensgr@gmx.net>
 
+	* Bonobo_Control_Capplet_generic.oaf.in:
+	* wrapper-script.in: remove obsolete files
+
+2007-06-06  Jens Granseuer  <jensgr@gmx.net>
+
 	* theme-thumbnail.c: (message_from_child),
 	(generate_theme_thumbnail), (generate_theme_thumbnail_async),
 	(theme_thumbnail_factory_init):
